syntax = "proto3";
option optimize_for = SPEED;
option go_package = "github.com/andisulistyonugroho/skpro-auth";

service SalesOrder {
    rpc GetPricelist (GpRequest) returns (GpResponse);
    rpc GetPricelistDetail (GpdRequest) returns (GpdResponse);
    rpc NewOrder(NsoRequest) returns (NsoResponse);
}

message GpRequest {
    optional int32 en_id = 1;
}

message GpResponse {
    repeated PricelistType data = 1;
}

message PricelistType {
    int32 pi_id = 1;
    int32 en_id = 2;
    string pi_code = 3;
    string pi_desc = 4;
    string pi_start_date = 5;
    string pi_end_date = 6;
    string pi_active = 7;
    int32 area_id = 8;
    string pi_oid = 9;
}

message GpdRequest {
    string pi_oid = 1;
    int32 en_id = 2;
    int32 payment_type = 3;
    int32 area_id = 4;
}

message GpdResponse {
    repeated PricelistDetail data = 1;
}

message PricelistDetail {
    int32 pt_id = 1;
    string title = 2;
    string pidd_oid = 3;
    float price = 4;
    float discount = 5;
    float dp = 6;
    int32 min_qty = 7;
    int32 area_id = 8;
    string unit = 9;
}

message NsoRequest {
    TheOrderReq sales_order = 1;
    repeated OrderDetailReq sales_order_detail = 2;
}

message TheOrderReq {
    int32 so_en_id = 1;
    int32 so_ptnr_id_bill = 2;
    string so_date = 3;
    string so_add_by = 4;
    int32 so_pi_id = 5;
    float so_disc_header = 6;
    float so_total = 7;
}

message OrderDetailReq {
    int32 sod_pt_id = 1;
    int32 sod_qty = 2;
    float sod_price = 3;
    float sod_disc = 4;
}

message NsoResponse {
    TheOrder sales_order = 1;
    repeated OrderDetail sales_order_detail = 2;
}

message TheOrder {
    optional string so_oid = 1;
    int32 so_en_id = 2;
    string so_date = 3;
}

message OrderDetail {
    optional string sod_oid = 1;
}